: readme and styling updated:fire:

--- a/recommend.ipynb
+++ b/recommend.ipynb
@@ -688,6 +688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filtering the tracks by genre\n",
     "def get_filtered_track_df(df, genres_to_include):\n",
     "    df['genres'] = df.genres.apply(lambda x: [i[1:-1] for i in str(x)[1:-1].split(\", \")])\n",
     "    df_exploded = df.explode(\"genres\")[df.explode(\"genres\")[\"genres\"].isin(genres_to_include)]\n",
@@ -704,6 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# list of genre \n",
     "genres_to_include = genres = ['dance pop', 'electronic', 'electropop', 'hip hop', 'jazz', 'k-pop', 'latin', 'pop', 'pop rap', 'r&b', 'rock']\n",
     "track_with_year_and_genre = join_genre_and_date(artists_data, albums_data, track_data)\n",
     "filtered_track_df = get_filtered_track_df(track_with_year_and_genre, genres_to_include)"
@@ -971,6 +973,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Final Dataset Exported\n",
     "filtered_track_df.to_csv(\"filtered_track_df.csv\", index=False)"
    ]
   }
